--- a/views/head.pug
+++ b/views/head.pug
@@ -5,3 +5,8 @@ head
   link(rel="icon" type="image/png" href="images/chips.png")
   link( rel="stylesheet" type="text/css" href="css/bulma.min.css")
   script( defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js")
+  style.
+    | html, body {
+    | margin: 0;
+    | height: 100%;
+    | }
