--- a/views/index.pug
+++ b/views/index.pug
@@ -3,4 +3,9 @@ html
   include head.pug
   body
     include navbar.pug
+    section.section
+      .container.is-widescreen
+          p
+          | BetHAX är en sida för att hitta de mest marknadskraftiga oddsen, de mest attraktiva välkomstbonusarna, samt att lära sig hur man på ett garanterat sätt kan tjäna pengar genom att betta.
 
+    include footer.pug
